#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(nfr4xbm.cpp)
AM_INIT_AUTOMAKE(meobm,0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

PKG_PROG_PKG_CONFIG
AM_CONDITIONAL(HAVE_FREETYPE, $have_freetype)

AC_OUTPUT(Makefile)
